# fall_risk_assessment

./: .gitignore  LICENSE
fallrisk_perception/kinect_image/: CMakeLists.txt
human_motion_analysis/: README.md
human_motion_analysis/activity_analysis_bringup/launch/: data_collect.launch  prediction.launch  tug_robot.launch  tug_ws.launch
human_motion_analysis/activity_model/: CMakeLists.txt  package.xml
human_motion_analysis/activity_model/data/: sit_vs_others.csv
human_motion_analysis/activity_model/model/: model.pkl_06.npy  model.pkl_10.npy
human_motion_analysis/activity_predict/: CMakeLists.txt  package.xml
human_motion_analysis/activity_predict/scripts/: predict.py
human_motion_analysis/activity_predict/src/: const.py  predict.py
human_motion_analysis/activity_prediction/: CMakeLists.txt  CMakeLists.txt~  package.xml
human_motion_analysis/activity_prediction/scripts/: predict.py
human_motion_analysis/activity_tracker/: .package.xml.swp  CMakeLists.txt  package.xml
human_motion_analysis/activity_tracker/conf/: frames.cfg
human_motion_analysis/activity_tracker/src/: activity_tracker.cpp
human_motion_analysis/activity_visualise/: CMakeLists.txt  package.xml
human_motion_analysis/activity_visualise/src/: visualise.cpp
human_motion_analysis/csv_logger/: CMakeLists.txt  package.xml
human_motion_analysis/csv_logger/src/: csv_logger.cpp
human_motion_analysis/csv_logger/tf_logs/: bkup.csv  chair_stand.csv  toe_touch.csv  user_transform_log.csv
human_motion_analysis/data_collect/: CMakeLists.txt  package.xml
human_motion_analysis/data_collect/src/: data_collect.cpp
human_motion_analysis/fallrisk_follower/: CMakeLists.txt  package.xml
human_motion_analysis/fallrisk_follower/launch/: 3dsensor.launch  follower.launch
human_motion_analysis/feature_extraction/: distanceData1.csv  distanceData2.csv  distanceData3.csv  features.txt  fullTest1.csv  fullTest2.csv  viewData.py
human_motion_analysis/kinect_client/: CMakeLists.txt  README.md  package.xml  package.xml~
human_motion_analysis/kinect_client/include/: TCP.hpp
human_motion_analysis/kinect_client/src/: .joints.cpp.swp  .swp  README.md  TCP.cpp  hand_tf_converter.cpp  joints.cpp  pcl_client.cpp  pcl_client.cpp~  pcl_test.cpp~  rgbd_client.cpp  skeleton_client.cpp  skeleton_client.cpp~  tf_publisher.cpp
human_motion_analysis/learn_predict/: CMakeLists.txt  package.xml
human_motion_analysis/learn_predict/scripts/: learn_predict.py  learn_predict.py~
human_motion_analysis/openni_tracker/: CMakeLists.txt.user.e14466c
human_motion_analysis/openni_tracker/src/: openni_tracker.cpp
human_motion_analysis/tug_bringup/: CMakeLists.txt  package.xml
human_motion_analysis/tug_bringup/launch/: data_collect.launch  (+3 more)
human_motion_analysis/tug_test/: CMakeLists.txt  package.xml
human_motion_analysis/tug_test/conf/: frames.cfg
human_motion_analysis/tug_test/data/: data.csv
human_motion_analysis/tug_test/launch/: data_collect.launch  prediction.launch  prediction_off.launch  tug_robot.launch  tug_ws.launch
human_motion_analysis/tug_test/model/: model.pkl  model.pkl_02.npy  model.pkl_03.npy  model.pkl_07.npy  model.pkl_08.npy  model.pkl_09.npy
human_motion_analysis/tug_test/scripts/: learn.py  learn.py~  predict.py  predict2.py  predict2.py~
human_motion_analysis/tug_test/src/: tf_logger.cpp  visualize.cpp
(+11 files in other folders)
